[package]
name = "mumble-sys"
version = "0.1.0"
authors = ["Zoey <Dessix@Dessix.net>"]
edition = "2018"
description = "Plugin SDK for Mumble's client plugin system"
license-file = "LICENSE.md"
homepage = "https://github.com/Dessix/rust-mumble-sys"
repository = "https://github.com/Dessix/rust-mumble-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collect_slice = "1.2.0"
parking_lot = { version = "~0.11", features = [ "nightly" ] }

[build-dependencies]
bindgen = "~0.55.1"
const_format = "~0.1.0"
regex = "^1"

[features]
default = []

idebuild = []
