[package]
name = "mumble-sys"
version = "0.1.1"
authors = ["Zoey <Dessix@Dessix.net>"]
edition = "2018"
description = "Plugin SDK for Mumble's client plugin system"
license-file = "LICENSE.md"
homepage = "https://github.com/Dessix/rust-mumble-sys"
repository = "https://github.com/Dessix/rust-mumble-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collect_slice = "1.2.0"
parking_lot = { version = "~0.12", features = [ "nightly" ] }

[build-dependencies]
bindgen = { version = "~0.57.0" }
const_format = "~0.1.0"
heck = "~0.3.2"
log = "~0.4.11"
env_logger = "0.8.2"
regex = "^1"

[features]
default = []

idebuild = []
